gcc/testsuite/g++.dg/modules/p0713-1.C
// { dg-additional-options "-fmodules-ts" }
module;
module; // { dg-error "expected" }
